Finishing with file uploads to S3 bucket and retrieving and saving cover_image_url
